v0.20.0/_sources/_generated/groups/object-storage.rst.txt
Object Storage
==============

This section details Object Storage-related Linode CLI commands.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. _commands_object-storage_cancel:

`cancel <https://techdocs.akamai.com/linode-api/reference/post-cancel-object-storage>`_
---------------------------------------------------------------------------------------


Cancel Object Storage on an Account.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Usage

.. rst-class:: action-subheading-description

The format accepted by this command.



..  code-block:: bash

    linode-cli object-storage cancel [-h]



.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli object-storage cancel










------------

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. _commands_object-storage_clusters-list:

`clusters-list <https://techdocs.akamai.com/linode-api/reference/get-object-storage-clusters>`_
-----------------------------------------------------------------------------------------------

.. warning::
    This command is deprecated and may not be supported in the future.

Returns a paginated list of available Object Storage legacy clusters.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Usage

.. rst-class:: action-subheading-description

The format accepted by this command.



..  code-block:: bash

    linode-cli object-storage clusters-list [-h] [--order-by {}]
        [--order {asc,desc}]



.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli object-storage clusters-list







.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`domain` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-east-1.lin...eobjects.com`
      - The base URL for this cluster, used for connecting with third-party clients.

    * - :action-table-field-name:`id` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-east-1`
      - The unique ID for this cluster.

    * - :action-table-field-name:`region` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-east`
      - The region where this cluster is located.

    * - :action-table-field-name:`static_site_domain` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`website-us-ea...eobjects.com`
      - The base URL for this cluster used when hosting static sites.

    * - :action-table-field-name:`status` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`available`
      - This cluster's status.








------------

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. _commands_object-storage_clusters-view:

`clusters-view <https://techdocs.akamai.com/linode-api/reference/get-object-storage-cluster>`_
----------------------------------------------------------------------------------------------

.. warning::
    This command is deprecated and may not be supported in the future.

Returns a single Object Storage cluster.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Usage

.. rst-class:: action-subheading-description

The format accepted by this command.



..  code-block:: bash

    linode-cli object-storage clusters-view [-h] [--order-by {}]
        [--order {asc,desc}] clusterId



.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli object-storage clusters-view us-east-1




.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Parameters

.. rst-class:: action-subheading-description

Positional parameters used to define the resource this command should target.




.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`clusterId`
      - :action-table-field-type:`str`
      - Identifies a cluster where this bucket lives.








.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`domain` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-east-1.lin...eobjects.com`
      - The base URL for this cluster, used for connecting with third-party clients.

    * - :action-table-field-name:`id` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-east-1`
      - The unique ID for this cluster.

    * - :action-table-field-name:`region` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-east`
      - The region where this cluster is located.

    * - :action-table-field-name:`static_site_domain` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`website-us-ea...eobjects.com`
      - The base URL for this cluster used when hosting static sites.

    * - :action-table-field-name:`status` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`available`
      - This cluster's status.








------------

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. _commands_object-storage_keys-list:

`keys-list <https://techdocs.akamai.com/linode-api/reference/get-object-storage-keys>`_
---------------------------------------------------------------------------------------


Returns a paginated list of Object Storage keys for authenticating to the Object Storage S3 API.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Usage

.. rst-class:: action-subheading-description

The format accepted by this command.



..  code-block:: bash

    linode-cli object-storage keys-list [-h] [--order-by {}]
        [--order {asc,desc}]



.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli object-storage keys-list







.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`access_key` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`KVAKUTGBA4WTR2NSJQ81`
      - A unique string chosen by the API to identify this key.

    * - :action-table-field-name:`id` 
      - :action-table-field-type:`int`
      - :action-table-field-example:`123`
      - This Object Storage key's unique ID.

    * - :action-table-field-name:`label` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`my-key`
      - The label given to this key.

    * - :action-table-field-name:`limited` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - Whether this Object Storage key limits access to specific buckets and permissions.

    * - :action-table-field-name:`secret_key` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`N/A`
      - This Object Storage key's secret key.




.. _commands_object-storage_keys-list_attribute_sections_bucket_access:

.. rst-class:: action-section-header

bucket_access


.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`bucket_access.bucket_name` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`example-bucket`
      - The name of the bucket the key can access in the ``region``.

    * - :action-table-field-name:`bucket_access.cluster` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-west-1`
      - Identifies the legacy cluster where this key can be used.

    * - :action-table-field-name:`bucket_access.permissions` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`read_only`
      - The level of access the key grants to the ``bucket_name``.

    * - :action-table-field-name:`bucket_access.region` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-west`
      - The region where the Object Store ``bucket_name`` resides.




.. _commands_object-storage_keys-list_attribute_sections_regions:

.. rst-class:: action-section-header

regions


.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`regions.id` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-west`
      - Identifies each region where you can use the Object Storage key.

    * - :action-table-field-name:`regions.s3_endpoint` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-west-00.l...eobjects.com`
      - The S3-compatible hostname you can use to access the Object Storage buckets in this region.








------------

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. _commands_object-storage_keys-view:

`keys-view <https://techdocs.akamai.com/linode-api/reference/get-object-storage-key>`_
--------------------------------------------------------------------------------------


Returns a single Object Storage key provisioned for your account.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Usage

.. rst-class:: action-subheading-description

The format accepted by this command.



..  code-block:: bash

    linode-cli object-storage keys-view [-h] [--order-by {}]
        [--order {asc,desc}] keyId



.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli object-storage keys-view \
        --keyId 12345




.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Parameters

.. rst-class:: action-subheading-description

Positional parameters used to define the resource this command should target.




.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`keyId`
      - :action-table-field-type:`int`
      - The key to look up.








.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`access_key` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`KVAKUTGBA4WTR2NSJQ81`
      - A unique string chosen by the API to identify this key.

    * - :action-table-field-name:`id` 
      - :action-table-field-type:`int`
      - :action-table-field-example:`123`
      - This Object Storage key's unique ID.

    * - :action-table-field-name:`label` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`my-key`
      - The label given to this key.

    * - :action-table-field-name:`limited` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - Whether this Object Storage key limits access to specific buckets and permissions.

    * - :action-table-field-name:`secret_key` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`N/A`
      - This Object Storage key's secret key.




.. _commands_object-storage_keys-view_attribute_sections_bucket_access:

.. rst-class:: action-section-header

bucket_access


.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`bucket_access.bucket_name` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`example-bucket`
      - The name of the bucket the key can access in the ``region``.

    * - :action-table-field-name:`bucket_access.cluster` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-west-1`
      - Identifies the legacy cluster where this key can be used.

    * - :action-table-field-name:`bucket_access.permissions` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`read_only`
      - The level of access the key grants to the ``bucket_name``.

    * - :action-table-field-name:`bucket_access.region` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-west`
      - The region where the Object Store ``bucket_name`` resides.




.. _commands_object-storage_keys-view_attribute_sections_regions:

.. rst-class:: action-section-header

regions


.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`regions.id` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-west`
      - Identifies each region where you can use the Object Storage key.

    * - :action-table-field-name:`regions.s3_endpoint` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-west-00.l...eobjects.com`
      - The S3-compatible hostname you can use to access the Object Storage buckets in this region.








------------

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. _commands_object-storage_keys-create:

`keys-create <https://techdocs.akamai.com/linode-api/reference/post-object-storage-keys>`_
------------------------------------------------------------------------------------------


Provisions a new Object Storage key for authenticating to the Object Storage S3 API.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Usage

.. rst-class:: action-subheading-description

The format accepted by this command.



..  code-block:: bash

    linode-cli object-storage keys-create [-h] [--regions regions]
        [--bucket_access bucket_access]
        [--bucket_access.region region]
        [--bucket_access.bucket_name bucket_name]
        [--bucket_access.permissions permissions] [--label label]



.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli object-storage keys-create \
        --label "my-object-storage-key" \
        --bucket_access '[{"region": "ap-south", "bucket_name": "bucket-example-1", "permissions": "read_write" }]'





.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Arguments

.. rst-class:: action-subheading-description

Additional fields used to execute this request.





.. rst-class:: action-argument-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`\-\-bucket_access` :ref:`(section) <commands_object-storage_keys-create_argument_sections_bucket_access>`
      - :action-table-field-type:`json`
      - :action-table-field-example:`N/A`
      - N/A

    * - :action-table-field-name:`\-\-label`
      - :action-table-field-type:`str`
      - :action-table-field-example:`my-key`
      - The label for the Object Storage key, for display purposes only.

    * - :action-table-field-name:`\-\-regions`
      - :action-table-field-type:`[]str`
      - :action-table-field-example:`us-iad`
      - You can use a key to create new buckets in regions set in this array.




.. _commands_object-storage_keys-create_argument_sections_bucket_access:

.. rst-class:: action-section-header

bucket_access



.. rst-class:: action-argument-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`\-\-bucket_access.bucket_name`
      - :action-table-field-type:`str`
      - :action-table-field-example:`example-bucket`
      - The ``label`` set for a bucket that this key grants access to.

    * - :action-table-field-name:`\-\-bucket_access.permissions`
      - :action-table-field-type:`str`
      - :action-table-field-example:`read_write`
      - The level of access the key grants to the specified ``bucket_name``.

    * - :action-table-field-name:`\-\-bucket_access.region`
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-iad`
      - The region where the ``bucket_name`` you want the key to access is located.







.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`access_key` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`KVAKUTGBA4WTR2NSJQ81`
      - A unique string chosen by the API to identify this key.

    * - :action-table-field-name:`id` 
      - :action-table-field-type:`int`
      - :action-table-field-example:`123`
      - This Object Storage key's unique ID.

    * - :action-table-field-name:`label` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`my-key`
      - The label given to this key.

    * - :action-table-field-name:`limited` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - Whether this Object Storage key limits access to specific buckets and permissions.

    * - :action-table-field-name:`secret_key` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`N/A`
      - This Object Storage key's secret key.




.. _commands_object-storage_keys-create_attribute_sections_bucket_access:

.. rst-class:: action-section-header

bucket_access


.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`bucket_access.bucket_name` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`example-bucket`
      - The name of the bucket the key can access in the ``region``.

    * - :action-table-field-name:`bucket_access.cluster` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-west-1`
      - Identifies the legacy cluster where this key can be used.

    * - :action-table-field-name:`bucket_access.permissions` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`read_only`
      - The level of access the key grants to the ``bucket_name``.

    * - :action-table-field-name:`bucket_access.region` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-west`
      - The region where the Object Store ``bucket_name`` resides.




.. _commands_object-storage_keys-create_attribute_sections_regions:

.. rst-class:: action-section-header

regions


.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`regions.id` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-west`
      - Identifies each region where you can use the Object Storage key.

    * - :action-table-field-name:`regions.s3_endpoint` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-west-00.l...eobjects.com`
      - The S3-compatible hostname you can use to access the Object Storage buckets in this region.








------------

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. _commands_object-storage_keys-update:

`keys-update <https://techdocs.akamai.com/linode-api/reference/put-object-storage-key>`_
----------------------------------------------------------------------------------------


Updates an Object Storage key on your account.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Usage

.. rst-class:: action-subheading-description

The format accepted by this command.



..  code-block:: bash

    linode-cli object-storage keys-update [-h] [--regions regions]
        [--label label] keyId



.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli object-storage keys-update \
        --keyId 12345
        --label "my-object-storage-key"




.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Parameters

.. rst-class:: action-subheading-description

Positional parameters used to define the resource this command should target.




.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`keyId`
      - :action-table-field-type:`int`
      - The key to look up.






.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Arguments

.. rst-class:: action-subheading-description

Additional fields used to execute this request.





.. rst-class:: action-argument-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`\-\-label`
      - :action-table-field-type:`str`
      - :action-table-field-example:`my-key`
      - The label for the Object Storage key.

    * - :action-table-field-name:`\-\-regions`
      - :action-table-field-type:`[]str`
      - :action-table-field-example:`us-iad`
      - Replace the current list of ``regions`` set in a specific key.







.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`access_key` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`KVAKUTGBA4WTR2NSJQ81`
      - A unique string chosen by the API to identify this key.

    * - :action-table-field-name:`id` 
      - :action-table-field-type:`int`
      - :action-table-field-example:`123`
      - This Object Storage key's unique numeric identifier.

    * - :action-table-field-name:`label` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`my-key`
      - The label given to this key.

    * - :action-table-field-name:`limited` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - Whether this Object Storage key limits access to specific buckets and permissions.

    * - :action-table-field-name:`secret_key` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`OiA6F5r0niLs...7KqOzcmitmHw`
      - This Object Storage key's secret key.




.. _commands_object-storage_keys-update_attribute_sections_regions:

.. rst-class:: action-section-header

regions


.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`regions.id` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-west`
      - Identifies each region where you can use the Object Storage key.

    * - :action-table-field-name:`regions.s3_endpoint` 
      - :action-table-field-type:`str`
      - :action-table-field-example:`us-west-00.l...eobjects.com`
      - The S3-compatible hostname you can use to access your Object Storage buckets in this region.








------------

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. _commands_object-storage_keys-delete:

`keys-delete <https://techdocs.akamai.com/linode-api/reference/delete-object-storage-key>`_
-------------------------------------------------------------------------------------------


Revokes an Object Storage Key.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Usage

.. rst-class:: action-subheading-description

The format accepted by this command.



..  code-block:: bash

    linode-cli object-storage keys-delete [-h] keyId



.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli object-storage keys-delete 12345




.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Parameters

.. rst-class:: action-subheading-description

Positional parameters used to define the resource this command should target.




.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`keyId`
      - :action-table-field-type:`int`
      - The key to look up.











------------

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. _commands_object-storage_ssl-view:

`ssl-view <https://techdocs.akamai.com/linode-api/reference/get-object-storage-ssl>`_
-------------------------------------------------------------------------------------


Returns a boolean value indicating if this bucket has a corresponding TLS/SSL certificate that was uploaded by an Account user.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Usage

.. rst-class:: action-subheading-description

The format accepted by this command.



..  code-block:: bash

    linode-cli object-storage ssl-view [-h] [--order-by {}]
        [--order {asc,desc}] regionId bucket



.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli object-storage ssl-view \
        us-east-1 example-bucket




.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Parameters

.. rst-class:: action-subheading-description

Positional parameters used to define the resource this command should target.




.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`regionId`
      - :action-table-field-type:`str`
      - Identifies a region where this bucket lives.

    * - :action-table-field-name:`bucket`
      - :action-table-field-type:`str`
      - The bucket name.








.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`ssl` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - A boolean indicating if this Bucket has a corresponding TLS/SSL certificate that was uploaded by an Account user.








------------

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. _commands_object-storage_ssl-delete:

`ssl-delete <https://techdocs.akamai.com/linode-api/reference/delete-object-storage-ssl>`_
------------------------------------------------------------------------------------------


Deletes this Object Storage bucket's user uploaded TLS/SSL certificate and private key.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Usage

.. rst-class:: action-subheading-description

The format accepted by this command.



..  code-block:: bash

    linode-cli object-storage ssl-delete [-h] regionId bucket



.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli object-storage ssl-delete \
        us-east-1 example-bucket




.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Parameters

.. rst-class:: action-subheading-description

Positional parameters used to define the resource this command should target.




.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`regionId`
      - :action-table-field-type:`str`
      - Identifies a region where this bucket lives.

    * - :action-table-field-name:`bucket`
      - :action-table-field-type:`str`
      - The bucket name.












.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. _commands_object-storage_ssl-upload:

`ssl-upload <https://techdocs.akamai.com/linode-api/reference/post-object-storage-ssl>`_
----------------------------------------------------------------------------------------


Upload a TLS/SSL certificate and private key to be served when you visit your Object Storage bucket via HTTPS.

.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Usage

.. rst-class:: action-subheading-description

The format accepted by this command.



..  code-block:: bash

    linode-cli object-storage ssl-upload [-h]
        [--private_key private_key] [--certificate certificate]
        regionId bucket



.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Sample

.. rst-class:: action-subheading-description

Examples of how this command might be used.




..  code-block:: bash

    linode-cli object-storage ssl-upload \
        us-east-1 example-bucket \
        --certificate "-----BEGIN CERTIFICATE-----
                                     CERTIFICATE_INFORMATION
                                     -----END CERTIFICATE-----" \
        --private_key "-----BEGIN PRIVATE KEY-----
                                     PRIVATE_KEY_INFORMATION
                                     -----END PRIVATE KEY-----"




.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Parameters

.. rst-class:: action-subheading-description

Positional parameters used to define the resource this command should target.




.. rst-class:: action-parameter-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 98

    * - Name
      - Type
      - Description

    * - :action-table-field-name:`regionId`
      - :action-table-field-type:`str`
      - Identifies a region where this bucket lives.

    * - :action-table-field-name:`bucket`
      - :action-table-field-type:`str`
      - The bucket name.






.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Arguments

.. rst-class:: action-subheading-description

Additional fields used to execute this request.





.. rst-class:: action-argument-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`\-\-certificate` :action-table-field-required:`*`
      - :action-table-field-type:`str`
      - :action-table-field-example:`-----BEGIN CE...IFICATE-----`
      - Your Base64 encoded and PEM formatted SSL certificate.

    * - :action-table-field-name:`\-\-private_key` :action-table-field-required:`*`
      - :action-table-field-type:`str`
      - :action-table-field-example:`-----BEGIN PR...ATE KEY-----`
      - The private key associated with this TLS/SSL certificate.







.. role:: action-keyword-key
.. role:: action-keyword-values
.. role:: action-table-field-name
.. role:: action-table-field-optional
.. role:: action-table-field-required
.. role:: action-table-field-type
.. role:: action-table-field-example
.. role:: action-argument-additional-details

.. role:: json(code)
    :language: JSON

.. rst-class:: action-subheading

Result Attributes

.. rst-class:: action-subheading-description

The attributes returned by this command.




.. rst-class:: action-attribute-section-table

..  list-table::
    :header-rows: 1
    :width: 100%
    :widths: 1 1 1 97

    * - Name
      - Type
      - Example
      - Description

    * - :action-table-field-name:`ssl` 
      - :action-table-field-type:`bool`
      - :action-table-field-example:`true`
      - A boolean indicating if this Bucket has a corresponding TLS/SSL certificate that was uploaded by an Account user.









